<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>read_pointcloud</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="cocohuyue@gmail.com">yuehu</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>libpcl-all-dev</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>pcl_conversions</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
