<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simple_talker_components</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="yuehu@todo.todo">yuehu</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>example_interfaces</build_depend>
  <build_depend>rcl</build_depend>
  <build_depend>rmw_implementation</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <build_depend>rcutils</build_depend>

  <exec_depend>example_interfaces</exec_depend>
  <exec_depend>rcl</exec_depend>
  <exec_depend>rmw_implementation</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>rcutils</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
